--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table Cellspacing="20">
         <td><img src="./Nikhil pic.jpg" width="120" alt="nikhilphoto"></td>
         <td>
-            <h2>Nikhik Bhumeshwar Gadepally</h2>
+            <h2>Nikhil Bhumeshwar Gadepally</h2>
             <p><i>Full Stack Web Developer</i></p>
             <p>Passionate about implementing business requirements into technical solutions</p>
         </td>
